--- a/css/styles.css
+++ b/css/styles.css
@@ -503,6 +503,7 @@ h6 {
 .button.secondary:focus {
     color: var(--white-text-color);
     background-color: var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .filter-list .item:not(:last-child) {
@@ -560,4 +561,12 @@ h6 {
     border-left: 1px solid var(--border-color);
     border-right: 1px solid var(--border-color);
     padding-top: 20px;
+}
+
+.portfolio .link {
+    display: block;
+}
+
+.portfolio .link:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
